--- a/.next-cache/app-build-manifest.json
+++ b/.next-cache/app-build-manifest.json
@@ -11,35 +11,40 @@
       "static/chunks/main-app.js",
       "static/chunks/app/(panel)/dashboard/layout.js"
     ],
+    "/(panel)/dashboard/profile/page": [
+      "static/chunks/webpack.js",
+      "static/chunks/main-app.js",
+      "static/chunks/app/(panel)/dashboard/profile/page.js"
+    ],
     "/(panel)/dashboard/page": [
       "static/chunks/webpack.js",
       "static/chunks/main-app.js",
       "static/chunks/app/(panel)/dashboard/page.js"
     ],
-    "/api/clinic/appointments/route": [
+    "/(public)/page": [
       "static/chunks/webpack.js",
       "static/chunks/main-app.js",
-      "static/chunks/app/api/clinic/appointments/route.js"
+      "static/chunks/app/(public)/page.js"
     ],
     "/api/auth/[...nextauth]/route": [
       "static/chunks/webpack.js",
       "static/chunks/main-app.js",
       "static/chunks/app/api/auth/[...nextauth]/route.js"
     ],
+    "/api/clinic/appointments/route": [
+      "static/chunks/webpack.js",
+      "static/chunks/main-app.js",
+      "static/chunks/app/api/clinic/appointments/route.js"
+    ],
     "/(panel)/dashboard/services/page": [
       "static/chunks/webpack.js",
       "static/chunks/main-app.js",
       "static/chunks/app/(panel)/dashboard/services/page.js"
     ],
-    "/(panel)/dashboard/profile/page": [
+    "/(panel)/dashboard/plans/page": [
       "static/chunks/webpack.js",
       "static/chunks/main-app.js",
-      "static/chunks/app/(panel)/dashboard/profile/page.js"
-    ],
-    "/_not-found/page": [
-      "static/chunks/webpack.js",
-      "static/chunks/main-app.js",
-      "static/chunks/app/_not-found/page.js"
+      "static/chunks/app/(panel)/dashboard/plans/page.js"
     ]
   }
 }
