--- a/api/api/package.json
+++ b/api/api/package.json
@@ -9,18 +9,27 @@
     "build": "nest build",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "format": "prettier --write \"src/**/*.ts\"",
-    "generate:prisma": "prisma generate --schema=../prisma/schema.prisma"
+    "generate:prisma": "prisma generate --schema=../prisma/schema.prisma",
+    "openapi:json": "ts-node src/generate-swagger.ts"
   },
   "dependencies": {
     "@nestjs/common": "^10.4.7",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.4.7",
     "@nestjs/platform-express": "^10.4.7",
-    "@nestjs/config": "^3.2.3",
+    "@nestjs/swagger": "^7.4.2",
+    "@opentelemetry/auto-instrumentations-node": "^0.53.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.55.0",
+    "@opentelemetry/resources": "^1.25.1",
+    "@opentelemetry/sdk-node": "^0.55.0",
+    "@opentelemetry/semantic-conventions": "^1.25.1",
     "@prisma/client": "^6.16.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "prom-client": "^15.1.2",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.4.5",
@@ -31,9 +40,9 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.3.3",
+    "prisma": "^6.16.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.5.4",
-    "prisma": "^6.16.1"
+    "typescript": "^5.5.4"
   }
 }
