Ajustes Geral com TDD, API e observabilidade.

--- a/package.json
+++ b/package.json
@@ -28,12 +28,9 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.475.0",
-    "next": "^15.5.3",
     "next-auth": "^5.0.0-beta.25",
     "prom-client": "^15.1.3",
-    "react": "^19.0.0",
     "react-datepicker": "^8.1.0",
-    "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "sonner": "^2.0.1",
     "stripe": "^17.7.0",
@@ -41,12 +38,22 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@playwright/test": "^1.55.0",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
+    "jest": "^30.1.3",
+    "jest-environment-jsdom": "^30.1.2",
+    "next": "^15.5.3",
+    "playwright": "^1.55.0",
     "postcss": "^8.5.6",
     "prisma": "^6.4.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
