--- a/.github/workflows/deploy-coolify.yml
+++ b/.github/workflows/deploy-coolify.yml
@@ -1,31 +1,31 @@
-name: Deploy to Coolify
+# name: Deploy to Coolify
 
-on:
-  workflow_dispatch:
-    inputs:
-      env:
-        description: "Ambiente (ex.: production, staging)"
-        required: true
-        default: "production"
-  push:
-    branches: [main]
-    paths:
-      - "Dockerfile"
-      - "api/Dockerfile"
-      - "docker-compose.coolify.yml"
-      - ".github/workflows/deploy-coolify.yml"
+# on:
+#   workflow_dispatch:
+#     inputs:
+#       env:
+#         description: "Ambiente (ex.: production, staging)"
+#         required: true
+#         default: "production"
+#   push:
+#     branches: [main]
+#     paths:
+#       - "Dockerfile"
+#       - "api/Dockerfile"
+#       - "docker-compose.coolify.yml"
+#       - ".github/workflows/deploy-coolify.yml"
 
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Trigger Web service (Coolify)
-        run: |
-          curl -fsSL -X POST "${{ secrets.COOLIFY_WEBHOOK_WEB }}" \
-            -H 'Content-Type: application/json' \
-            -d "{\"ref\":\"${GITHUB_SHA}\",\"env\":\"${{ github.event.inputs.env || 'production' }}\"}"
-      - name: Trigger API service (Coolify)
-        run: |
-          curl -fsSL -X POST "${{ secrets.COOLIFY_WEBHOOK_API }}" \
-            -H 'Content-Type: application/json' \
-            -d "{\"ref\":\"${GITHUB_SHA}\",\"env\":\"${{ github.event.inputs.env || 'production' }}\"}"
+# jobs:
+#   deploy:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Trigger Web service (Coolify)
+#         run: |
+#           curl -fsSL -X POST "${{ secrets.COOLIFY_WEBHOOK_WEB }}" \
+#             -H 'Content-Type: application/json' \
+#             -d "{\"ref\":\"${GITHUB_SHA}\",\"env\":\"${{ github.event.inputs.env || 'production' }}\"}"
+#       - name: Trigger API service (Coolify)
+#         run: |
+#           curl -fsSL -X POST "${{ secrets.COOLIFY_WEBHOOK_API }}" \
+#             -H 'Content-Type: application/json' \
+#             -d "{\"ref\":\"${GITHUB_SHA}\",\"env\":\"${{ github.event.inputs.env || 'production' }}\"}"
