--- a/.next-cache/app-build-manifest.json
+++ b/.next-cache/app-build-manifest.json
@@ -16,6 +16,36 @@
       "static/chunks/main-app.js",
       "static/chunks/app/api/auth/[...nextauth]/route.js"
     ],
+    "/(panel)/dashboard/layout": [
+      "static/chunks/webpack.js",
+      "static/chunks/main-app.js",
+      "static/chunks/app/(panel)/dashboard/layout.js"
+    ],
+    "/(panel)/dashboard/page": [
+      "static/chunks/webpack.js",
+      "static/chunks/main-app.js",
+      "static/chunks/app/(panel)/dashboard/page.js"
+    ],
+    "/api/clinic/appointments/route": [
+      "static/chunks/webpack.js",
+      "static/chunks/main-app.js",
+      "static/chunks/app/api/clinic/appointments/route.js"
+    ],
+    "/(panel)/dashboard/services/page": [
+      "static/chunks/webpack.js",
+      "static/chunks/main-app.js",
+      "static/chunks/app/(panel)/dashboard/services/page.js"
+    ],
+    "/(panel)/dashboard/plans/page": [
+      "static/chunks/webpack.js",
+      "static/chunks/main-app.js",
+      "static/chunks/app/(panel)/dashboard/plans/page.js"
+    ],
+    "/(panel)/dashboard/profile/page": [
+      "static/chunks/webpack.js",
+      "static/chunks/main-app.js",
+      "static/chunks/app/(panel)/dashboard/profile/page.js"
+    ],
     "/(public)/clinica/[id]/page": [
       "static/chunks/webpack.js",
       "static/chunks/main-app.js",
