--- a/.next-cache/server/app-paths-manifest.json
+++ b/.next-cache/server/app-paths-manifest.json
@@ -1,8 +1,12 @@
 {
   "/_not-found/page": "app/_not-found/page.js",
-  "/favicon.ico/route": "app/favicon.ico/route.js",
-  "/api/auth/[...nextauth]/route": "app/api/auth/[...nextauth]/route.js",
+  "/api/clinic/appointments/route": "app/api/clinic/appointments/route.js",
   "/api/schedule/get-appointments/route": "app/api/schedule/get-appointments/route.js",
+  "/api/auth/[...nextauth]/route": "app/api/auth/[...nextauth]/route.js",
+  "/(public)/clinica/[id]/page": "app/(public)/clinica/[id]/page.js",
   "/(public)/page": "app/(public)/page.js",
-  "/(public)/clinica/[id]/page": "app/(public)/clinica/[id]/page.js"
+  "/(panel)/dashboard/page": "app/(panel)/dashboard/page.js",
+  "/(panel)/dashboard/services/page": "app/(panel)/dashboard/services/page.js",
+  "/(panel)/dashboard/profile/page": "app/(panel)/dashboard/profile/page.js",
+  "/(panel)/dashboard/plans/page": "app/(panel)/dashboard/plans/page.js"
 }
