--- a/observability/otel-collector.yaml
+++ b/observability/otel-collector.yaml
@@ -15,7 +15,14 @@ exporters:
   otlphttp/tempo:
     endpoint: http://tempo:4318
 
+extensions:
+  health_check:
+    endpoint: 0.0.0.0:13133
+  zpages:
+    endpoint: 0.0.0.0:55679
+
 service:
+  extensions: [ health_check, zpages ]
   pipelines:
     traces:
       receivers: [ otlp ]
