--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 .env
 .env.local
-.env.local.docker
+.env.local.*
 .env.coolify
+.next/
 .next-cache/
-node_modules/
-.next-cache
 .swc/*
 .truck
+node_modules/
